2A/05_Projet_GL/src/test/deca/context/invalid/complet/46_cast_vers_void.deca
// Description :
//   casting vers void 
// Resultats :
//    ligne 13 :  casting entre 'void' et 'A' n'est pas possible
// Historique :
//  cree le 16/01/2024

class A {

}
{
    A a = new A();
    a=(void)(a);
}